--- a/UNIHUB.ui
+++ b/UNIHUB.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="main">
      <widget class="QLabel" name="title_main">
@@ -182,6 +182,9 @@
         <width>151</width>
         <height>31</height>
        </rect>
+      </property>
+      <property name="echoMode">
+       <enum>QLineEdit::Password</enum>
       </property>
      </widget>
      <widget class="QLabel" name="id_label">
@@ -613,6 +616,9 @@
         <width>151</width>
         <height>31</height>
        </rect>
+      </property>
+      <property name="echoMode">
+       <enum>QLineEdit::Password</enum>
       </property>
      </widget>
      <widget class="QPushButton" name="admin_back">
