--- a/UNIHUB.ui
+++ b/UNIHUB.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>3</number>
+     <number>4</number>
     </property>
     <widget class="QWidget" name="main">
      <widget class="QLabel" name="title_main">
@@ -516,6 +516,26 @@
        <enum>Qt::AutoText</enum>
       </property>
      </widget>
+     <widget class="QPushButton" name="back_main_student">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>470</y>
+        <width>131</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Ubuntu Mono</family>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>მთავარი</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="admin">
      <widget class="QPushButton" name="auth_btn_admin">
@@ -911,6 +931,26 @@
         <width>251</width>
         <height>31</height>
        </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="back_main_admin">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>131</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Ubuntu Mono</family>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>მთავარი</string>
       </property>
      </widget>
     </widget>
