--- a/UNIHUB.ui
+++ b/UNIHUB.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>4</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="main">
      <widget class="QLabel" name="title_main">
@@ -79,7 +79,7 @@
        <enum>QFrame::Plain</enum>
       </property>
       <property name="text">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;justify&quot;&gt;&lt;span style=&quot; font-size:10pt; font-weight:400; color:#ffffff;&quot;&gt;მოგესალმებით, &lt;br/&gt;გთხოვთ აირჩიოთ თქვენთვის შესაბამისი სტატუსი ღილაკზე დაჭერით და მიჰყვეთ ინსტრუქციას.&lt;br/&gt;მადლობას გიხდით ჩვენი პლატფორმით სარგელობისთვის. წარმატებები! &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;justify&quot;&gt;&lt;span style=&quot; font-size:10pt; font-weight:400; color:#000000;&quot;&gt;მოგესალმებით, &lt;br/&gt;გთხოვთ აირჩიოთ თქვენთვის შესაბამისი სტატუსი ღილაკზე დაჭერით და მიჰყვეთ ინსტრუქციას.&lt;br/&gt;მადლობას გიხდით ჩვენი პლატფორმით სარგელობისთვის. წარმატებები! &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
       <property name="textFormat">
        <enum>Qt::AutoText</enum>
