--- a/UNIHUB.ui
+++ b/UNIHUB.ui
@@ -536,6 +536,26 @@
        <string>მთავარი</string>
       </property>
      </widget>
+     <widget class="QLabel" name="id_label_student_2">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>80</y>
+        <width>161</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Ubuntu Mono</family>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="admin">
      <widget class="QPushButton" name="auth_btn_admin">
